--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
           opacity: .75;
           content: "generated for you@example.com";
         }
+        h1 { prince-bookmark-level: none }
+        h2 { prince-bookmark-level: none }
+        h3 { prince-bookmark-level: none }
+        h4 { prince-bookmark-level: none }
+        h5 { prince-bookmark-level: none }
+        h6 { prince-bookmark-level: none }
+        .toc1 { prince-bookmark-level: 1}
+        .toc2 { prince-bookmark-level: 2}
+        .toc3 { prince-bookmark-level: 3}
       }
     </style>
   </head>
