--- a/index.html
+++ b/index.html
@@ -4,19 +4,22 @@
     <title>DocRaptor Ebook</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <style type="text/css">
-        @page {
-        size: US-Letter;
-        margin: 0 0 1in 0;        
+        @page { 
+            size: A4 landscape;
+            padding: .5in;
+            @bottom {
+                content: counter(page)
+            }
         }
         .toc1 { prince-bookmark-level: 1}
         .toc2 { prince-bookmark-level: 2}
         .toc3 { prince-bookmark-level: 3}
-        article#h1 { prince-bookmark-level: none }
-        article#h2 { prince-bookmark-level: none }
-        article#h3 { prince-bookmark-level: none }
-        article#h4 { prince-bookmark-level: none }
-        article#h5 { prince-bookmark-level: none }
-        article#h6 { prince-bookmark-level: none }
+        #article h1 { prince-bookmark-level: none }
+        #article h2 { prince-bookmark-level: none }
+        #article h3 { prince-bookmark-level: none }
+        #article h4 { prince-bookmark-level: none }
+        #article h5 { prince-bookmark-level: none }
+        #article h6 { prince-bookmark-level: none }
     </style>
   </head>
   <body>
